# Minimum CMake Version
CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

PROJECT(Inopine)

# Set C++ Version
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# Enable Unicode
ADD_DEFINITIONS(-D_UNICODE -DUNICODE)

# Add Sample App
ADD_EXECUTABLE(Inopine "${CMAKE_CURRENT_SOURCE_DIR}/Sample/Sample.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/Include/Inopine/Inopine.hpp")

# Add Include Directories
TARGET_INCLUDE_DIRECTORIES(Inopine PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Include/")

# Set Startup Project
SET_PROPERTY(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Inopine)